--- a/miniprogram/pages/about/about.wxml
+++ b/miniprogram/pages/about/about.wxml
@@ -14,7 +14,7 @@
 <view class='aboutbo'>
 
   <text class='hztitle' style="margin:30rpx">愿人海陌路，再无牵挂</text>
-  <ad unit-id="adunit-27aaa1280315e1a2"></ad>
+  <ad unit-id="adunit-187fa57158b27097"></ad>
   <text class='abcont'>夜已深，气候冷，小书房窗台旁，一道独影。\n容颜老，心沧然，今日今时，君何在！\n红尘陌上，踯躅数十载，是为等待，等风亦等你！\n夜色浓，以酒消愁，奈何酒入喉肠愁更愁。\n独灯照孤影，冬雨敲窗棂。\n执笔挥墨，一行文字述情愁，半壶墨汁慰相思。\n时也，缘也，命也！\n心意愁，往事幕幕上心头。\n然，景物依旧，人却早已两分飞。\n仰天望，朝天喃，此时此刻，君可如我同相思？
 </text>
 
@@ -31,7 +31,7 @@
  
 
  <view class='submitBtnView' style="margin:30rpx">
-      <button type="primary" formType="submit" plain="true" bindtap="buttonTap">书中红颜</button>
+      <button type="primary" formType="submit" plain="true" bindtap="openVideoAd">书中红颜</button>
     <modal title="保存二维码" hidden="{{modalHidden}}" bindconfirm="modalConfirm" bindcancel="modalCandel">
       <view class="tanchuan">
         <image class="image" src="../../image/ab3.jpg" mode='aspectFill'></image>
