--- a/miniprogram/pages/about4/about4.wxml
+++ b/miniprogram/pages/about4/about4.wxml
@@ -1,22 +1,22 @@
 <!-- 轮播图 -->
 <swiper class='lunbo' indicator-dots="true" autoplay="true" interval="3000" circular="true">
 <swiper-item>
-<image src="/image/ab10.jpg"></image>
+<image src="/image/ab40.jpg"></image>
 </swiper-item>
 <swiper-item>
-<image src="/image/ab11.jpg"></image>
+<image src="/image/ab41.jpg"></image>
 </swiper-item>
 <swiper-item>
-<image src="/image/ab12.jpg"></image>
+<image src="/image/ab42.jpg"></image>
 </swiper-item>
 </swiper>
 
 
 <view class='aboutbo'>
 
-  <text class='hztitle' style="margin:30rpx">枕畔的芳华，隔世的温柔</text>
-  <ad unit-id="adunit-bf37a3545c423afc"></ad>
-  <text class='abcont'>我用尽整个青春，却走不出悠长的雨季。\n一路行吟，一路回望。\n忆念不息，泪流不止。\n就将心化成一颗露珠，栖息在梦宽阔的叶子上。\n沉沉睡去，待下一世的晨曦，将我轻轻唤醒。\n那么，今生，可否允我尘埃落定。\n还我素心如月，温婉如玉。\n清眸流转，恰若初见时的盈盈。
+  <text class='hztitle' style="margin:30rpx">汉霄苍茫，繁华哀伤</text>
+  <ad unit-id="adunit-fcf269c3962970c3"></ad>
+  <text class='abcont'>亭苑姑娘，眉目若画，我可否提诗一首。\n吟咏这雨帘秋荷，映入画中的你。\n闺房姑娘，琴音独奏，我可否舞剑一回。\n记念这落花缤纷，笑靥明媚的你。\n船舫姑娘，绫罗绸缎，我可否落棋一盘。\n观赏这云湖晴空，机灵聪慧的你。\n浣溪姑娘，歌声悦耳，我可否回眸一望。\n凝视这半湾清水，倩影卓约的你。
 </text>
 
    <!-- <view class='container'>
@@ -35,9 +35,9 @@
       <button type="primary" formType="submit" plain="true" bindtap="buttonTap">书中红颜</button>
     <modal title="保存二维码" hidden="{{modalHidden}}" bindconfirm="modalConfirm" bindcancel="modalCandel">
       <view class="tanchuan">
-        <image class="image" src="../../image/ab23.jpg" mode='aspectFill'></image>
+        <image class="image" src="../../image/ab44.jpg" mode='aspectFill'></image>
       </view>
-      <view class='tctext'>静水流深，沧笙踏歌</view>
+      <view class='tctext'>人生一梦，白云苍狗</view>
     </modal>
    
    
